# twitch-emulator-assistant

./: .gitignore  Cargo.toml  Makefile.toml  test.txt
.github/workflows/: rust_build.yml
src/: macos_impl.rs  main.rs  win_impl.rs
src/macos/: logic.rs
src/windows/: logic.rs
