[package]
name = "twitch-emulator-04-13-24"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.1.3"
tokio = { version = "1.37.0", features = ["full"] }
twitch-irc = "5.0.1"
winapi = {version="0.3.9", features = ["winuser"]}

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"