[package]
name = "twitch-emulator-assistant"
version = "1.0.0"
edition = "2021"

[dependencies]
enigo = "0.2.0"
sdl2 = "0.36.0"
tokio = { version = "1.37.0", features = ["full"] }
twitch-irc = "5.0.1"
windows = {  version = "0.56.0",  features = ["Data_Xml_Dom","Win32_Foundation","Win32_Security","Win32_System_Threading","Win32_UI_WindowsAndMessaging"]}

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
